--- a/The Shadow over Innsmouth/Innsmouth.tex
+++ b/The Shadow over Innsmouth/Innsmouth.tex
@@ -9,13 +9,12 @@
 %\widowpenalty = 10000 
 
 \begin{document}
-\title{Der Schatten über Innsmouth -- WORK IN PROGRESS!!!}
+\title{Der Schatten über Innsmouth}
 \author{H.P. Lovecraft\\
 		Sebastian Jackel (Übersetzung)}
 \date{}
-\maketitle
 
-\textit{Diese Übersetzung ist noch unvollständig. Der Übersetzungstext ist noch größtenteils roh, d.h. mit Rechtschreib-, Übersetzungs- und Satzfehlern übersät. Die Revision bis zur Veröffentlichungsreife ist noch in Arbeit.}
+\include{disclaimer}
 
 \include{chapter1}
 \include{chapter2}
