--- a/The Shadow over Innsmouth/chapter1.tex
+++ b/The Shadow over Innsmouth/chapter1.tex
@@ -16,7 +16,7 @@ Ich war es, der in den frühen Morgenstunden des 16. Juli 1927 verzweifelt aus I
 
 Ich hatte nie von Innsmouth gehört, bis zu dem Tag bevor ich es zum ersten --- und bislang letzten mal sah. Ich war dabei, mein Erwachsenwerden mit einer Tour durch Neuengland zu feiern --- zur Besichtigung, Altertumskunde und Ahnenforschung --- und hatte geplant, direkt vom uralten Newburyport nach Arkham zu reisen, von wo die Familie meiner Mutter sich ableitet. Ich hatte kein Auto, sondern reiste mit Bahn, Straßenbahn und Reisebus, immer nach der billigsten Route suchend. In Newburyport erzählte man mir, dass der Dampfzug das Transportmittel sei, das ich nach Arkham wählen sollte und es war erst  am Fahrkartenschalter des Bahnhofs, als ich mich gegen den hohen Fahrpreis sträubte, dass ich von Innsmouth hörte. Der beleibte, verschmitzt blickende Fahrkartenverkäufer, dessen Aussprache ihn als nicht von hier verriet, schien verständnisvoll gegenüber meinen Bemühungen zur Sparsamkeit und machte einen Vorschlag, den keine meiner anderen Informationsquellen parat hatte.
 
-\glqq Sie \textit{könnten} vermutlich den alten Bus nehmen,\grqq sagte er etwas zögerlich, \glqq aber man hält hier nicht viel davon. Er fährt durch Innsmouth --- vielleicht haben Sie davon gehört --- und daher mögen die Leute ihn nicht. Betrieben von einem Innsmouther Kerl --- Joe Sargent --- aber kriegt nie irgendwelche Kundschaft von hier oder Arkham, glaube ich. Frage mich, warum er überhaupt fährt. Ich denk' es ist recht günstig, aber ich seh da nie mehr als zwei oder drei Leute drin --- niemand außer Leuten aus Innsmouth. Fährt ab vom Platz --- vor Hammond's Drogerie --- um 10 Uhr morgens und 7 Uhr abends, außer wenn sie das in letzter Zeit geändert haben. Sieht aus wie eine fürchterliche Klapperkiste --- Ich hab' da nie drin gesessen.\grqq
+\glqq Sie \textit{könnten} vermutlich den alten Bus nehmen,\grqq\ sagte er etwas zögerlich, \glqq aber man hält hier nicht viel davon. Er fährt durch Innsmouth --- vielleicht haben Sie davon gehört --- und daher mögen die Leute ihn nicht. Betrieben von einem Innsmouther Kerl --- Joe Sargent --- aber kriegt nie irgendwelche Kundschaft von hier oder Arkham, glaube ich. Frage mich, warum er überhaupt fährt. Ich denk' es ist recht günstig, aber ich seh da nie mehr als zwei oder drei Leute drin --- niemand außer Leuten aus Innsmouth. Fährt ab vom Platz --- vor Hammond's Drogerie --- um 10 Uhr morgens und 7 Uhr abends, außer wenn sie das in letzter Zeit geändert haben. Sieht aus wie eine fürchterliche Klapperkiste --- Ich hab' da nie drin gesessen.\grqq
 
 Das war das erste, das ich jemals vom beschatteten Innsmouth hörte. Jeder Hinweis auf eine Stadt, die auf geläufigen Karten nicht verzeichnet und in aktuellen Reiseführern nicht gelistet ist, hätte mich interessiert und die Art und Weise der Andeutungen des Fahrkartenverkäufers weckten in mir eine regelrechte Neugier. Eine Stadt, fähig solche Abneigung in ihren Nachbarn hervorzurufen, dachte ich, muss zumindest recht ungewöhnlich und die Aufmerksamkeit eines Touristen wert sein. Wenn sie vor Arkham käme, könnte ich dort Station machen --- und so bat ich den Verkäufer, mir etwas darüber zu erzählen. Er war sehr bedachtsam und sprach mit einer Miene, als fühle er sich dem was er sagte überlegen.
 
@@ -34,7 +34,7 @@ Das heißt, Seeleute die nicht aus Innsmouth waren. Eine Sache, die sie gegen de
 
 Das war vor der großen Seuche von 1846, als es mehr als die Hälfte der Bewohner von Innsmouth dahingerafft hat. Sie haben nie wirklich rausgefunden, was es war aber es war wahrscheinlich irgendeine fremde Krankheit, eingeschleppt aus China oder von sonstwo durch die Schiffahrt. Als wenn das nicht schlimm genug gewesen wäre --- gab' es Krawalle darüber und alles mögliche, scheußliche Tun von dem ich nicht glaube, dass es je die Stadt verlassen hat --- und es hat den Ort in einem furchtbaren Zustand hinterlassen. Hat sich nie erholt -- da können heute nicht mehr als 300 oder 400 Menschen wohnen.
 
-Aber die echte Sache dahinter, wie die Leute denken sind einfach Rassenvorurteile --- nicht, dass ich es denjenigen, die sie haben vorwerfen würde. Ich hasse diese Innsmouth-Leute auch und ich würde nicht in ihre Stadt fahren wollen. Ich denk, Du weißt --- auch wenn Du wie ein Weststaatler klingst --- wieviel unsere neuenglischen Schiffe mit zweifelhaften Häfen in Afrika, Asien, der Südsee und sonstwo und was für seltsame Leute die manchmal mitbrachten. Du hast vielleicht von dem Seemann aus Salem gehört, der mit einer Chinesin zur Frau nach Heim kam, und vielleicht weißt Du auch, dass da immer noch ein Haufen Fiji-Insulaner rund um Cape Cod leben.
+Aber in Wirklichkeit stecken dahinter wie die Leute denken einfach Rassenvorurteile --- nicht, dass ich es denjenigen, die sie haben vorwerfen würde. Ich hasse diese Innsmouth-Leute auch und ich würde nicht in ihre Stadt fahren wollen. Ich denk, Du weißt --- auch wenn Du wie ein Weststaatler klingst --- wieviel unsere neuenglischen Schiffe mit zweifelhaften Häfen in Afrika, Asien, der Südsee und sonstwo und was für seltsame Leute die manchmal mitbrachten. Du hast vielleicht von dem Seemann aus Salem gehört, der mit einer Chinesin zur Frau nach Heim kam, und vielleicht weißt Du auch, dass da immer noch ein Haufen Fiji-Insulaner rund um Cape Cod leben.
 
 Naja, da muss sowas mit den Innsmouthern sein. Der Ort war immer furchtbar vom Rest des Landes durch Marschen und Bäche abgeschnitten und man kann sich nicht über die Kleinigkeiten bei der Sache sicher sein, aber es ist ziemlich klar, dass Käpt'n Marsh ein paar ziemlich merkwürdige Exemplare mit als er noch alle drei Schiffe in Dienst hatte früher, in den Zwanzigern und Dreißigern. Da ist sicherlich ein fremdartiger Charakterzug in den Innsmouth-Leuten heutzutage --- Ich weiß nicht, wie ich es erklären soll aber es macht einem irgendwie Gänsehaut. Du wirst es ein wenig in Sargent bemerken, wenn Du seinen Bus nimmst. Manche von denen haben seltsam schmale Köpfe mit flachen Nasen und starre Glotzaugen, die nie zu blinzeln scheinen und mit deren Haut stimmt was nicht. Spröde und schorfig und die Seiten ihrer Hälse sind total verschrumpelt oder zerknittert. Kriegen auch alle ziemlich jung 'ne Glatze. Die älteren Kameraden sehen am schlimmsten aus --- Tatsache ist, ich glaube nicht, dass ich je einen sehr alten Typ von der Art gesehen hab'. Wette, die sterben wenn sie in den Spiegel schauen! Sind auch von Tieren gehasst --- die hatten viel Ärger mit Pferden bevor Autos hier Einzug hielten.
 
@@ -74,7 +74,7 @@ Miss Tilton, die alle möglichen Hypothesen zu Herkunft und Gegenwart der Tiara 
 
 Während die gute Dame mich auf dem Gebäude führte, klärte sie mich auf, dass die Piratentheorie zum Marsh-Vermögen unter den vernünftigen Menschen der Region gängig war. Ihre eigene Einstellung zum düsteren Innsmouth --- das sie nie gesehen hatte --- war eine geprägt von Abscheu gegenüber einer Gemeinde, die auf der kulturellen Skala weit abglitt und sie versicherte mir, dass die Gerüchte über Teufelsanbetung teils durch einen absonderlichen, geheimen Kult, der dort Fuß gefasst und alle orthodoxen Kirchen verschluckt hatte, bestätigt würden.
 
-Er wurde \glqq Der esoterische Orden des Dagon\grqq  genannt und war zweifelsohne eine minderwertige, quasi-heidnische Sache, die vor einem Jahrhundert, zu einer Zeit als die Innsmouther Fischgründe zu veröden drohten, importiert worden war. Seine Hartnäckigkeit unter einfältigen Leuten war sehr verständlich in Anbetracht der plötzlichen und dauerhaften Rückkehr überreichlichen Fischfangs und bald wurde er zum größten Einfluss auf die Stadt, die Freimaurerei komplett ersetzend und ließ sich bald in der alten Logenhalle am new Church Green nieder.
+Er wurde \glqq Der esoterische Orden des Dagon\grqq\ genannt und war zweifelsohne eine minderwertige, quasi-heidnische Sache, die vor einem Jahrhundert, zu einer Zeit als die Innsmouther Fischgründe zu veröden drohten, importiert worden war. Seine Hartnäckigkeit unter einfältigen Leuten war sehr verständlich in Anbetracht der plötzlichen und dauerhaften Rückkehr überreichlichen Fischfangs und bald wurde er zum größten Einfluss auf die Stadt, die Freimaurerei komplett ersetzend und ließ sich bald in der alten Logenhalle am new Church Green nieder.
 
 \looseness=1
 Für die frömmige Miss Tilton ergab dies einen ausgezeichneten Grund, die alte Stadt voll Verwesung und Einöde zu meiden, doch für mich war es lediglich ein weiterer Anreiz. Zu meinen architektonischen und historischen Erwartungen gesellte sich nun noch ein intensiver Eifer und ich konnte kaum schlafen in meinem kleinen Zimmer in der \glqq Y\grqq\ während die Nacht verging.
