--- a/The Shadow over Innsmouth/chapter5.tex
+++ b/The Shadow over Innsmouth/chapter5.tex
@@ -12,7 +12,7 @@ Doch das rätselhafteste war, dass niemand fähig war, die erfassten Eltern der 
 
 Ich reiste direkt von Boston heim nach Toledo und verbrachte später einen Monat in Maumee um mich von jenem Martyrium zu erholen. Im September ging ich für mein letztes Studienjahr nach Oberlin und war von da an bis zum nächsten Juli beschäftigt mit dem Studium und anderen erbaulichen Aktivitäten --- an den vergangenen Schrecken nur durch gelegentliche Besuche von Regierungsleuten erinnert, die in Verbindung mit der Kampagne, die meine Gesuche und Beweise losgetreten hatten. Etwa Mitte Juli --- nur ein Jahr nach den Erlebnissen in Innsmouth --- verbrachte ich eine Woche bei der Familie meiner verstorbenen Mutter in Cleveland und verglich einige meiner neuen genealogischen Daten mit den verschiedenen Aufzeichnungen, Überlieferungen und Erbstücken dort um zu sehen, was ich für eine Verbindungskarte erstellen konnte.
 
-Die Arbeit bereitete mir nicht gerade Vergnügen, denn die Atmosphäre des Williamson-Hauses hatte etwas Deprimierendes für mich. Es lastete dort ein morbider Druck auf allem und meine Mutter hatte Besuche bei ihren Eltern in meiner Kindheit nie angeregt, obwohl sie ihren Vater immer willkommen geheißen hatte, wenn er in Toledo war. Meine in Arkham geborene Großmutter war mir immer merkwürdig und fast furchterregend vorgekommen und ich glaube, ich hatte nicht getrauert, als sie verschwand. Ich war damals acht Jahre alt und man hatte sich erzählt, dass sie in Trauer um den Selbstmord meines Onkel Douglas, ihres ältesten Sohnes, davongezogen war. Er hatte sich nach einer Reise nach Neuengland erschossen --- zweifelsohne die selbe Reise durch die man sich beim Geschichtsverein von Arkham an ihn erinnerte.
+Ich fand an dieser Arbeit nicht gerade großen Gefallen, denn die Atmosphäre des Williamson-Hauses hatte etwas Deprimierendes für mich. Es lastete dort ein morbider Druck auf allem und meine Mutter hatte Besuche bei ihren Eltern in meiner Kindheit nie angeregt, obwohl sie ihren Vater immer willkommen geheißen hatte, wenn er in Toledo war. Meine in Arkham geborene Großmutter war mir immer merkwürdig und fast furchterregend vorgekommen und ich glaube, ich hatte nicht getrauert, als sie verschwand. Ich war damals acht Jahre alt und man hatte sich erzählt, dass sie in Trauer um den Selbstmord meines Onkel Douglas, ihres ältesten Sohnes, davongezogen war. Er hatte sich nach einer Reise nach Neuengland erschossen --- zweifelsohne die selbe Reise durch die man sich beim Geschichtsverein von Arkham an ihn erinnerte.
 
 Dieser Onkel hatte ihr ähnlich gesehen und ich hatte ihn ebenfalls nie gemocht. Irgendetwas an beider starrem, unverwandtem Blick hatte in mir vages, unerklärliches Unbehagen verursacht. Meine Mutter und Onkel Walter hatten nicht so ausgesehen. Sie waren nach ihrem Vater  gekommen, obwohl der arme kleine Cousin Lawrence --- Walter's Sohn --- fast ein perfektes Duplikat seiner Großmutter gewesen war, bis ihn seine Krankheit in die permanente Abschottung einer Nervenklinik in Canton gezwungen hatte. Ich hatte ihn vier Jahre lang nicht gesehen, doch mein Onkel hatte einmal angedeutet, dass sein Zustand, geistig wie körperlich sehr schlecht war. Diese Sorge war vermutlich die Ursache für den Tod seiner Mutter zwei Jahre zuvor.
 
