--- a/The Shadow over Innsmouth/chapter2.tex
+++ b/The Shadow over Innsmouth/chapter2.tex
@@ -1,6 +1,6 @@
 \chapter*{II}
 
-Um kurz vor Zehn am nächsten Morgen stand ich mit einer kleinen Reisetasche vor Hammond's Drug Store am alten Marktplatz und wartete auf den Innsmouth-Bus. Als die Stunde seiner Ankunft nahte, bemerkte ich ein allgemeines Abwandern der anwesenden Müßiggänger zu anderen Orten, die Straße hoch oder zum Ideal Lunch auf der anderen Seite des Platzes. Offensichtlich hatte der Schalterbeamte nicht übertrieben, was die Abneigung, die die hiesigen Leute gegenüber Innsmouth und seinen Bewohnern hegten, anging. Nach wenigen Augenblicken ratterte ein kleiner Autobus von extremer Klapprigkeit und dreckig grauer Farbe die State Street herunter, wendete und hielt am Bordstein neben mir. Mir war sofort bewusst, dass dies der Richtige war. Ein Eindruck, den das halb lesbare Schild in der Windschutzscheibe --- \glqq Arkham-Innsmouth-Newb'port\grqq --- bald bestätigte.
+Um kurz vor Zehn am nächsten Morgen stand ich mit einer kleinen Reisetasche vor Hammond's Drug Store am alten Marktplatz und wartete auf den Innsmouth-Bus. Als die Stunde seiner Ankunft nahte, bemerkte ich ein allgemeines Abwandern der anwesenden Müßiggänger zu anderen Orten, die Straße hoch oder zum Ideal Lunch auf der anderen Seite des Platzes. Offensichtlich hatte der Schalterbeamte nicht übertrieben, was die Abneigung, die die hiesigen Leute gegenüber Innsmouth und seinen Bewohnern hegten, anging. Nach wenigen Augenblicken ratterte ein kleiner Autobus von extremer Klapprigkeit und dreckig grauer Farbe die State Street herunter, wendete und hielt am Bordstein neben mir. Mir war sofort bewusst, dass dies der Richtige war. Ein Eindruck, den das halb lesbare Schild in der Windschutzscheibe --- \glqq Arkham-Innsmouth-Newb'port\grqq\ --- bald bestätigte.
 
 Da waren nur drei Fahrgäste --- dunkle, ungepflegte Männer von mürrischem Antlitz und einigermaßen jugendlicher Gestalt --- und als das Fahrzeug stoppte, schlurften sie unbeholfen heraus und begannen, die State Street auf stille, fast verstohlene Art entlangzugehen. Der Fahrer stieg ebenfalls aus und ich beobachtete ihn, wie er in die Drogerie ging um einen Einkauf zu tätigen. Dies, dachte ich, muss jener Joe Sargent sein, den der Fahrkartenverkäufer erwähnt hatte. Und noch bevor ich irgendwelche Details bemerkte, überkam mich eine Welle der spontanen Abneigung, die ich weder kontrollieren, noch erklären konnte. Es kam mir plötzlich sehr selbstverständlich vor, dass die Leute hier nicht in einem Bus fahren wollten, der im Besitz dieses Mannes war und von ihm gefahren wurde oder den Lebensraum eines solchen Mannes und Seinesgleichen öfter als nötig zu besuchen.
 
@@ -8,7 +8,7 @@ Als der Fahrer wieder aus dem Geschäft trat, schaute ich ihn genauer an und ver
 
 Eine gewisse, ihm anhaftende Schmierigkeit verstärkte meinen Missfallen. Er arbeitete dem Anschein nach an den Docks für die Fischer --- oder hing dort herum --- und trug sehr viel von ihrem charakteristischen Gestank mit sich. Welches fremdartige Blut genau sich in ihm wieder fand, konnte ich beim besten Willen nicht erraten. Seine Eigentümlichkeiten sahen sicherlich nicht asiatisch, polynesisch, morgenländisch oder negrid aus, doch sah ich ein, warum die Leute ihn als fremdartig empfanden. Ich selbst hätte eher biologische Degeneration angenommen, als fremde Herkunft.
 
-Ich bedauerte es, als ich sah, dass keine anderen Fahrgäste im Bus sein würden. Irgendwie mochte ich den Gedanken nicht, alleine mit diesem Busfahrer zu fahren. Doch als die Abfahrtszeit sich näherte, überkam ich meine Bedenken und folgte dem Mann an Bord, reichte ihm einen Dollarschein und murmelte das Wort \glqq Innsmouth\grqq. Er schaute mich kurz neugierig an, während er mir wortlos vierzig Cent Wechselgeld herausgab. Ich nahm einen Platz weit hinter ihm, jedoch auf der selben Seite des Busses ein, da ich während der Reise die Küste verfolgen wollte.
+Ich bedauerte es, als ich sah, dass keine anderen Fahrgäste im Bus sein würden. Irgendwie mochte ich den Gedanken nicht, alleine mit diesem Busfahrer zu fahren. Doch als die Abfahrtszeit sich näherte, überkam ich meine Bedenken und folgte dem Mann an Bord, reichte ihm einen Dollarschein und murmelte das Wort \glqq Innsmouth.\grqq\ Er schaute mich kurz neugierig an, während er mir wortlos vierzig Cent Wechselgeld herausgab. Ich nahm einen Platz weit hinter ihm, jedoch auf der selben Seite des Busses ein, da ich während der Reise die Küste verfolgen wollte.
 
 Schließlich startete das heruntergekommene Vehikel mit einem Zucken und ratterte geräuschvoll entlang der alten Backsteinbauten der State Street in einer Wolke von Auspuffgasen. Die Leute auf den Bürgersteigen flüchtig betrachtend, glaubte ich in ihnen einen eigentümlichen Wunsch zu entdecken, Blickkontakt mit dem Bus --- oder zumindest den Eindruck, so auszusehen als starre man ihn an --- zu vermeiden. Dann bogen wir links auf die High Street ab, wo es schneller voranging, an imposanten alten Villen aus der Frühzeit der Republik und noch älteren Farmhäusern aus der Kolonialzeit vorbei, bevor sie in eine lange, eintönige Strecke offenen Küstenlandes hervortrat.
 
@@ -33,7 +33,7 @@ Als der Bus die tieferliegende Ebene erreichte, begann ich den stetigen Ton eine
 Bald tauchten Querstraßen und Kreuzungen auf; jene zur Linken führten küstenwärts in Gefilde unbefestigten Elends und Verfalls, während die zur Rechten den Blick auf vergangene Größe freigaben. Bis jetzt hatte ich in der Stadt keine Menschen gesehen, doch nun kamen mir vereinzelte Zeichen von Bewohnung entgegen --- Fenster mit Vorhängen hier und da und gelegentlich ein zerbeultes Automobil am Straßenrand. Pflaster und Gehsteige waren besser umrissen und obwohl die meisten Häuser sehr alt waren --- alte Holz- und Ziegelbauten aus dem frühen 19. Jahrhundert --- wurden sie offensichtlich in bewohnbarem Zustand gehalten. Als Hobbyantiquar verlor ich fast meinen Ekel vor dem Geruch und mein Gefühl von Bedrohung und Abstoßung im Angesicht dieses reichhaltigen, unveränderten, überlebenden Stückes Vergangenheit.
 
 Doch ich erreichte mein Ziel nicht ohne einen starken Eindruck von geradezu bewegend widerwärtiger Art. Der Bus war an einer Art offenem Versammlungsplatz oder Kreisel angelangt, mit Kirchen auf zwei Seiten und den Resten einer runden Grünfläche in der Mitte und ich schaute zu einer großen, säulengesäumten Halle an der Abfahrt rechter Hand voraus. Die einstmals weiße Farbe des Gebäudes war nun grau und begann abzublättern und das schwarz-goldene Schild unter dem Giebel war so verblasst, dass ich nur schwer die Worte \glqq Esoterischer
-Orden des Dagon\grqq  ausmachen konnte. Dies war also der ehemalige Freimaurertempel, der nun zu einem niederen Kult übergegangen war. Während ich mich anstrengte, diese Inschrift zu entziffern, wurde meine Beobachtung durch die rauen Töne einer gesprungenen Glocke auf der anderen Straßenseite gestört. und ich drehte mich schnell um aus dem Fenster auf meiner Seite des Busses zu  schauen.
+Orden des Dagon\grqq\ ausmachen konnte. Dies war also der ehemalige Freimaurertempel, der nun zu einem niederen Kult übergegangen war. Während ich mich anstrengte, diese Inschrift zu entziffern, wurde meine Beobachtung durch die rauen Töne einer gesprungenen Glocke auf der anderen Straßenseite gestört. und ich drehte mich schnell um aus dem Fenster auf meiner Seite des Busses zu  schauen.
 
 Der Lärm kam aus dem plump wirkenden Turm einer steinernen Kirche aus deutlich späterer Zeit als die meisten Häuser, gebaut in einem unbeholfenem gotischen Stil und mit einem unverhältnismäßig hohen Keller mit verriegelten Fensterläden. Obwohl die Zeiger der Uhr auf der Seite, die ich betrachtete fehlten, wusste ich, dass diese heiseren Glockenschläge elf Uhr ansagten. Dann wurden plötzlich alle Gedanken an die Zeit ausgelöscht durch ein hereinbrechendes eindringliches Bild von unerklärlichem Schrecken, das mich ergriffen hatte, bevor ich begriffen hatte, worum es sich handelte. Das Tor des Kirchenkellers stand offen und zeigte darin ein schwarzes Rechteck. Und als ich hereinschaute, kreuzte ein bestimmtes Objekt dieses dunkle Rechteck --- oder schien es zu kreuzen --- und brannte in meinen Verstand eine augenblickliche, alptraumhafte Vorstellung, die noch unerträglicher wirkte, weil eine Auseinandersetzung damit nicht eine einzige alptraumhafte Eigenschaft darin hervorbrachte.
 
@@ -41,7 +41,7 @@ Es war ein lebendes Wesen --- das erste außer dem Fahrer, das ich gesehen hatte
 
 Langsam wurden, dünn versprengt, abstoßend aussehende jüngere Leute auf den Bürgersteigen sichtbar --- einzelne Individuen oder stille Gruppen von zwei bis drei. Die unteren Stockwerke der bröckelnden Häuser beherbergten manchmal kleine Läden mit schmuddeligen Schildern und ich bemerkte gelegentlich geparkte Lastwagen an denen wir vorbeiratterten. Das Geräusch von Wasserfällen wurde immer deutlicher und bald sah ich eine recht tiefe Schlucht vor uns, die von einer breiten, von eisernen Geländern gesäumte Brücke überspannt wurde, auf deren anderer Seite sich ein Platz ausbreitete. Als wir über die Brücke schepperten, schaute ich nach beiden Seiten heraus und erspähte einige Fabrikgebäude an der Kante der grasbedeckten Klippe und auf halbem Weg darunter. Weit unter mir floss das Wasser reichlich und ich konnte zwei Gruppen von kraftvollen Wasserfällen zu meiner rechten und mindestens einen weiteren stromabwärts zu meiner Rechten sehen. An diesem Punkt war das Getöse ohrenbetäubend. Dann rollten wir auf den großen, halbkreisförmigen Platz jensetis des Flusses und hielten an der rechten Seite vor einem hohen, kuppelgekrönten Gebäude mit Überresten von gelber Farbe und einem halblesbaren Schild, das es als \textit{Gilman House} auswies.
 
-Ich war froh, den Bus zu verlassen und schritt sogleich voran, um meine Reisetasche in der schäbigen Hotellobby zu hinterlegen. Dort war nur eine Person in Sicht -- ein älterer Mann ohne das, was ich das \glqq Innsmouth-Aussehen\grqq  getauft hatte --- und ich entschied mich, ihm keine der Fragen zu stellen, die mich plagten, als ich mich an die merkwürdigen Dinge erinnerte, die in diesem Hotel bemerkt worden waren. Stattdessen schlenderte ich nach draußen auf den Platz, von dem aus der Bus schon weitergefahren war und beobachtete den Anblick minuziös und abwägend.
+Ich war froh, den Bus zu verlassen und schritt sogleich voran, um meine Reisetasche in der schäbigen Hotellobby zu hinterlegen. Dort war nur eine Person in Sicht -- ein älterer Mann ohne das, was ich das \glqq Innsmouth-Aussehen\grqq\ getauft hatte --- und ich entschied mich, ihm keine der Fragen zu stellen, die mich plagten, als ich mich an die merkwürdigen Dinge erinnerte, die in diesem Hotel bemerkt worden waren. Stattdessen schlenderte ich nach draußen auf den Platz, von dem aus der Bus schon weitergefahren war und beobachtete den Anblick minuziös und abwägend.
 
 Auf der einen Seite des gepflasterten, offenen Platzes sah man die gerade Linie des Flusses, auf der anderen einen Halbkreis aus schräg überdachten Ziegelbauten aus der Zeit um 1800, aus dem mehrere Straßen nach Südosten, Süden und Südwesten abgingen. Es gab erbärmlich wenige und kleine Lampen --- allesamt schwache Glühlampen --- und ich war froh, dass meine Pläne eine Abreise vor Einbruch der Dunkelheit vorsahen, obwohl ich wusste, dass der Mond hell scheinen würde. Die Gebäude waren allesamt in angemessenem Zustand und fassten vielleicht ein Dutzend geöffnete Läden unter denen sich ein Lebensmittelgeschäft der Kette First National, ein tristes Restaurant, eine Drogerie, zwei Fischgroßhändler, sowie am östlichsten Punkt des Platzes ein Büro der einzigen Industrie dieser Stadt --- der Marsh Refining Company. Man konnte vielleicht zehn Menschen sehen und vier oder fünf Autos und Laster standen verstreut herum. Ich konnte mir selbst denken, dass dies das Gemeindezentrum von Innsmouth war. Zum Osten konte ich flüchtige Blicke der blauen Umrisse des Hafens erhaschen, gegen die sich die verfallenden Überreste von drei einstmals schönen Georgianischen Kirchtürmen erhoben. Und zur Küste hin auf der anderen Seite des Flusses sah ich den weißen Glockenturm, der das was ich für die Marsh-Raffinerie hielt überragte.
 
@@ -53,7 +53,7 @@ Manche Orte waren quasi verbotenes Gebiet, wie er unter beträchtlichem Aufwand 
 
 Und was die Einwohner von Innsmouth anging, so wusste der Junge kaum, was er mit ihnen anfangen sollte. Sie waren so verstohlen und so selten anzutreffen wie Tiere, die in Bauten lebten und man mochte sich kaum vorstellen, wie sie sich die Zeit vertrieben, außer durch die sporadische Fischerei. Vielleicht --- anhand der Menge von Schwarzgebranntem, das sie konsumierten zu urteilen --- lagen sie tagsüber die meisten Stunden, vom Alkoholrausch benommen darnieder. Sie schienen in ihrem Missmut in einer Art Gemeinschaft und gemeinsamer Auffassung vereint, die Welt zu verschmähen, als gäbe es andere, dieser vorzuziehende Sphären des Daseins. Ihr Aussehen --- besonders die starrenden Augen, die nie zu blinzeln schienen --- war sicherlich schockierend genug und ihre Stimmen klangen abscheulich. Es war entsetzlich, sie in ihren Kirchen des nachts singen zu hören, besonders zu ihren Hauptfestivitäten oder Erneuerungszeremonien, die zweimal im Jahr, am 30. April und am 31. Oktober stattfanden.
 
-Sie waren dem Wasser zugetan und schwammen häufig, sowohl im Fluss als auch im Hafenbecken. Häufig fanden Schwimmwettkämpfe raus zum Devil Reef statt und jedermann schien fähig, sich an diesem anstrengenden Sport zu beteiligen. Wenn man es sich recht überlegt, so waren in der Öffentlichkeit generell nur eher junge Leute zu sehen und von diesen schienen die ältesten am entstelltesten auszusehen. Ausnahmen waren meist Leute ohne jede Spur von Anomalie, wie der alte Angestellte im Hotel. Man mochte sich fragen, was aus der Masse an älteren Leuten wurde und ob das \glqq Innsmouth-Aussehen\grqq  nicht ein seltsames und heimtückisches Krankheitssymptom sei, das sein Opfer mehr und mehr ergriff, während die Jahre vorbeigingen.
+Sie waren dem Wasser zugetan und schwammen häufig, sowohl im Fluss als auch im Hafenbecken. Häufig fanden Schwimmwettkämpfe raus zum Devil Reef statt und jedermann schien fähig, sich an diesem anstrengenden Sport zu beteiligen. Wenn man es sich recht überlegt, so waren in der Öffentlichkeit generell nur eher junge Leute zu sehen und von diesen schienen die ältesten am entstelltesten auszusehen. Ausnahmen waren meist Leute ohne jede Spur von Anomalie, wie der alte Angestellte im Hotel. Man mochte sich fragen, was aus der Masse an älteren Leuten wurde und ob das \glqq Innsmouth-Aussehen\grqq\ nicht ein seltsames und heimtückisches Krankheitssymptom sei, das sein Opfer mehr und mehr ergriff, während die Jahre vorbeigingen.
 
 Natürlich könnte nur ein sehr seltenes Leiden solche enormen und drastischen anatomischen Veränderungen in einem einzelnen ausgewachsenen Individuum hervorrufen --- Veränderungen, die Einfluss auf den Knochenbau bis zur Grundform des Schädels nahmen --- jedoch war nicht einmal dieser Gesichtspunkt rätselhafter oder beispielloser als die sichtbaren Züge der Krankheit im Ganzen. Es sei schwer, so bemerkte der Junge, zu diesem Thema irgendwelche wirklichen Schlüsse zu ziehen, da man die Einwohner nie persönlich kennenlerne, ganz gleich wie lang man in Innsmouth leben möge.
 
@@ -82,7 +82,7 @@ Diese Fenster starrten so gespenstisch, dass es mich Überwindung kostete, mich 
 
 Fish Street war so verlassen wie die Hauptstraße, unterschied sich aber durch zahlreiche geziegelte und steinerne Lagerhäuser, die sich noch immer in ausgezeichnetem Zustand befanden. Water Street glich ihr beinahe gänzlich, bis auf die großen Lücken zum Ufer hin, wo einst Werften gestanden hatten. Ich begegnete keinem lebenden Wesen bis auf die versprengten Angler weit draußen an der Mole und ich hörte nichts bis auf das Plätschern der Wellen im Hafen und dem Tosen der Wasserfälle des Manuxet. Diese Stadt begann, mir mehr und mehr auf die Nerven zu gehen und ich schaute heimlich hinter mich als ich meinen Weg zurück über die wackelige Water Street Bridge nahm. Die Fish Street Bridge lag laut der Zeichnung in Trümmern.
 
-Nördlich des Flusses gab es Spuren verwahrlosten Lebens --- Aktive Fischfabriken, rauchende Schornsteine und geflickte Dächer hier und da, gelegentliche Geräusche aus ungewissen Quellen und sporadische, watschelnde Silhouetten in den düsteren Straßen und unbefestigten Gassen --- doch schien mir dies noch beklemmender als die Verlassenheit im Süden. Zum einen waren die Menschen hässlicher und abartiger als jene näher zum Stadtzentrum hin, so dass ich mehrmals übel an etwas absolut fantastisches erinnert wurde, das ich nicht zuordnen konnte. Zweifellos trat die fremdartige Verformung der Einwohner von Innsmouth hier stärker zu Tage als weiter landeinwärts --- es sei denn, das \glqq Innsmouth-Aussehen\grqq war eine Krankheit und keine Blutlinie, in welchem Fall dieser Stadtteil die weiter fortgeschrittenen Fälle beherbergte.
+Nördlich des Flusses gab es Spuren verwahrlosten Lebens --- Aktive Fischfabriken, rauchende Schornsteine und geflickte Dächer hier und da, gelegentliche Geräusche aus ungewissen Quellen und sporadische, watschelnde Silhouetten in den düsteren Straßen und unbefestigten Gassen --- doch schien mir dies noch beklemmender als die Verlassenheit im Süden. Zum einen waren die Menschen hässlicher und abartiger als jene näher zum Stadtzentrum hin, so dass ich mehrmals übel an etwas absolut fantastisches erinnert wurde, das ich nicht zuordnen konnte. Zweifellos trat die fremdartige Verformung der Einwohner von Innsmouth hier stärker zu Tage als weiter landeinwärts --- es sei denn, das \glqq Innsmouth-Aussehen\grqq\ war eine Krankheit und keine Blutlinie, in welchem Fall dieser Stadtteil die weiter fortgeschrittenen Fälle beherbergte.
 
 Ein Detail, das mich beunruhigte war die Verteilung der wenigen, schwachen Geräusche, die ich vernahm. Sie sollten normalerweise aus den sichtbar bewohnten Häusern kommen, doch waren sie in Wirklichkeit oft am lautesten aus den am stärksten verbarrikadierten Fassaden zu hören. Man konnte Knarzen, Trippeln und zweifelhafte, heisere Laute wahrnehmen und ich musste unbehaglich an die geheimen Tunnel denken, die der Junge vom Lebensmittelladen angedeutet hatte. Plötzlich ertappte ich mich dabei, wie ich mich fragte, wie wohl die Stimmen dieser Bewohner klingen mögen. Ich hatte bisher noch kein gesprochenes Wort in diesem Viertel vernommen und war unerklärlich bestrebt dies auch so zu belassen.
 
