--- a/The Shadow over Innsmouth/chapter3.tex
+++ b/The Shadow over Innsmouth/chapter3.tex
@@ -6,11 +6,11 @@ Man hatte mir versichert, dass der alte Mann nur wilde, unzusammenhängende und 
 
 Mir war bewusst, dass ich ihn nicht hier und jetzt behelligen konnte, denn die Feuerwehrmänner würden dies sicherlich bemerken und etwas einzuwenden haben. Stattdessen, so überlegte ich, würde ich mich vorbereiten indem ich etwas schwarz gebrannten Schnaps besorgen würde von einem Ort, an dem nach den Beschreibungen des Jungen aus dem Laden reichlich davon vorhanden sein sollte. Danach würde ich ganz beiläufig am Feuerwehrhaus herumlungern und mich zum alten Zadok gesellen, nachdem er zu einem seiner häufigen Streifzüge aufgebrochen war. Der Junge hatte erzählt, dass er sehr rastlos war und selten mehr als eine oder zwei Stunden auf einmal vor der Station saß.
 
-Ein Quart Whiskey war einfach, aber nicht billig hinter einem schäbigen Gemischtwarenladen genau hinter dem Platz in der Eliot Street zu beschaffen. Von dem dreckig aussehenden Kerl, der mich dort erwartete, stierte mich ebenfalls ein Hauch des \glqq Innsmouth-Aussehens\grqq an, doch er war auf seine Art recht höflich, wahrscheinlich gewohnt an die Kundschaft geselliger Fremder --- Lastwagenfahrer, Goldkäufer und ähnliche Gestalten --- waren gelegentlich in der Stadt.
+Ein Quart Whiskey war einfach, aber nicht billig hinter einem schäbigen Gemischtwarenladen genau hinter dem Platz in der Eliot Street zu beschaffen. Von dem dreckig aussehenden Kerl, der mich dort erwartete, stierte mich ebenfalls ein Hauch des \glqq Innsmouth-Aussehens\grqq\ an, doch er war auf seine Art recht höflich, wahrscheinlich gewohnt an die Kundschaft geselliger Fremder --- Lastwagenfahrer, Goldkäufer und ähnliche Gestalten --- waren gelegentlich in der Stadt.
 
 Ich betrat den Platz wieder und sah, dass das Glück mir hold war, denn --- aus der Paine Street um die Ecke des Gilman House schlurfend --- erblickte ich nicht weniger als die große, dürre, lumpige Gestalt des alten Zadok Allen selbst. Getreu meines Planes gewann ich seine Aufmerksamkeit indem ich die gerade gekaufte Flasche schwenkte und bald war mir klar, dass er angefangen hatte, mir sehnsüchtig hinterher zu schlurfen als ich in die Waite Street einbog, auf dem Weg in die verlassenste Gegend, die mir einfiel.
 
-Ich wählte meinen Weg gemäß der Karte, die der Junge aus dem Lebensmittelladen mir angefertigt hatte und wählte ein vollständig aufgegebenes Stück des südlichen Ufers, das ich zuvor besucht hatte, als Ziel. Die einzigen Leute, die dort zu sehen gewesen waren, waren die Angler auf der weit entfernten Mole und noch ein paar Blocks südlich konnte ich aus deren Sichtweite geraten, ein paar Sitzplätze in einer stillgelegten Werft finden und dann den alten Zadok für unbegrenzte Zeit unbeobachtet befragen. Noch bevor ich die Main Street erreichte konnte ich hinter mir ein schwaches und keuchendes \glqq Hey Mister!\grqq  vernehmen und erlaubte es dem alten Mann, mich einzuholen und einige kräftige Schlucke aus der Flasche zu nehmen.
+Ich wählte meinen Weg gemäß der Karte, die der Junge aus dem Lebensmittelladen mir angefertigt hatte und wählte ein vollständig aufgegebenes Stück des südlichen Ufers, das ich zuvor besucht hatte, als Ziel. Die einzigen Leute, die dort zu sehen gewesen waren, waren die Angler auf der weit entfernten Mole und noch ein paar Blocks südlich konnte ich aus deren Sichtweite geraten, ein paar Sitzplätze in einer stillgelegten Werft finden und dann den alten Zadok für unbegrenzte Zeit unbeobachtet befragen. Noch bevor ich die Main Street erreichte konnte ich hinter mir ein schwaches und keuchendes \glqq Hey Mister!\grqq\ vernehmen und erlaubte es dem alten Mann, mich einzuholen und einige kräftige Schlucke aus der Flasche zu nehmen.
 
 Ich begann, meine Fühler auszustrecken während wir die Water Street entlang gingen und uns in mitten der allgegenwärtigen Trostlosigkeit und wirr geneigten Ruinen nach Süden wandten, doch ich fand das die alte Zunge sich nicht so schnell wie ich erhofft hatte, lösen ließ. Nach einiger Zeit sah ich eine grasbewachsene Öffnung zur See hin zwischen verfallenen Ziegelmauern, jenseits derer sich verunkrauteten Ausdehnungen einer alten Werft aus Lehm und Stein zeigten. Haufen von moosbewachsenen Steinen nahe am Wasser versprachen passable Sitzplätze und der Ort war vor jedem möglichen Blick geschützt durch ein zerstörtes Lagerhaus im Norden. Die Aura von Tod und Verlassenheit war morbide und der Fischgestank fast unerträglich, doch ich hatte beschlossen, mich durch nichts abschrecken zu lassen.
 
